structmeta-tests/tests/compile_fail/struct_meta/expected_flag_but_name_args.rs
#[structmeta_tests::attr_flag(value(10))]
fn my_func() {}

fn main() {}
