structmeta-tests/tests/compile_fail/struct_meta/expected_flag_but_name_args.stderr
error: expected flag `value`, found `value`(...)
 --> $DIR/expected_flag_but_name_args.rs:1:31
  |
1 | #[structmeta_tests::attr_flag(value(10))]
  |                               ^^^^^
